# OpenFina

./: .gitignore  .gitingnore  PACKAGING.md  README.md  build_exe.py  build_full.py  cli.py  main.py  needed.md  pyproject.toml  resource_rc.py  structure.md
app/: __init__.py  bootstrap.py  main.py
docs/: PACKAGING.md  RELEASE_v2.0.0.md  RELEASE_v2.1.0.md  RELEASE_v2.1.1.md  needed.md  needed_ledgers_closing.md  structure.md
docs/superpowers/plans/: 2026-05-07-rbac-plan.md
docs/superpowers/specs/: 2026-05-07-rbac-design.md
icons/: icon.ai  user.ai
installer/: OpenFina_setup.iss
lib/: models.py  voucher.py
models/: bookset.py  data.py  voucher.py
scripts/: build_exe.py  build_full.py  seed_release_v2_data.py  seed_sample_vouchers.py
source/: subject.json
tests/: test_admin_methods.py  test_general_ledger.py
ui/: InputWindow.py  InputWindow.ui  Ui_InputWindow.py  Ui_certification.py  Ui_login.py  Ui_mainwindow.py  bookset_dialogs.py  calendar.py  certificate.py  certification.ui  clickableLabel.py  filter.py  general_ledger.py  login.py  login.ui  mainwindow.py  mainwindow.ui  password_change_dialog.py  resource.qrc  resource_rc.py  subject.py  summary.py  user_management.py  voucher_list_dialog.py
utils/: logger.py  password.py  path_helper.py  subject.py  theme.py
